@@ -495,7 +495,7 @@ namespace libtorrent
 			void announce_lsd(sha1_hash const& ih, int port, bool broadcast = false) TORRENT_OVERRIDE;
 
 			void save_state(entry* e, boost::uint32_t flags) const;
-			void load_state(bdecode_node const* e);
+			void load_state(bdecode_node const* e, boost::uint32_t flags);
 
 			bool has_connection(peer_connection* p) const TORRENT_OVERRIDE;
 			void insert_peer(boost::shared_ptr<peer_connection> const& c) TORRENT_OVERRIDE;
